# ccmat

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
ccmat/: Cargo.toml
ccmat-babel/: Cargo.toml
ccmat-babel/src/: lib.rs
ccmat-core/: Cargo.toml
ccmat-core/src/: atomic.rs  lib.rs  math.rs  moyo_wrapper.rs  path_data.rs  structure.rs  symmetry.rs
ccmat-core/tests/build_crystal/: fail_duplicate_with_atoms.rs  fail_insufficient_inputs.rs
ccmat-kspace/: Cargo.toml
ccmat-kspace/src/: lib.rs  main.rs  path.rs
ccmat-macros/: Cargo.toml
ccmat-macros/src/: lib.rs  main.rs
ccmat-macros/tests/: test_macros.rs
ccmat-macros/tests/ui/: matrix_3x3_frac_error.rs  matrix_3x3_frac_error.stderr  matrix_3x3_frac_var_unknow_fail.rs  matrix_3x3_frac_var_unknow_fail.stderr  matrix_3x3_row_ele_number_err.rs  matrix_3x3_row_ele_number_err.stderr
ccmat/src/: lib.rs  main.rs
python/: Cargo.toml  pyproject.toml
python/ccmat/: __init__.py
python/src/: lib.rs
src/: lib.rs  main.rs
tests/build_crystal/: ?fail_invalid_frac_coord.rs  fail_duplicate_with_atoms.rs  fail_duplicate_with_atoms.stderr  fail_duplicate_with_lattice.rs  fail_duplicate_with_lattice.stderr  fail_insufficient_inputs.rs  fail_insufficient_inputs.stderr  pass_default_build.rs
