[package]
name = "ccmat-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
evalexpr = "12.0.3"
log = "0.4.28"
moyo = "0.7.1"
nalgebra = "0.34.1"

[dev-dependencies]
trybuild = "1.0.112"
