[package]
name = "ccmat-kspace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
moyo = "0.7.1"
ccmat-core = { path="../ccmat-core" }
evalexpr = "12.0.3"
log = "0.4.28"
