[package]
name = "ccmatpy"
version = "0.1.0"
edition = "2021"
authors = ["Jusong Yu <jusong.d.yu@gmail.com>"]
homepage = "https://github.com/ccmat-lab/ccmat"

[lib]
name = "ccmat"
crate-type = ["cdylib"]

[dependencies]
ccmat = { path = ".." }
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3", "abi3-py310", "auto-initialize"] }

[package.metadata.maturin]
python-source = "ccmat"
